crates/puffin-cli/tests/snapshots/pip_compile__compile_python_37.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--python-version"
    - py37
    - "--cache-dir"
    - /tmp/.tmpHz7Dc2
  env:
    VIRTUAL_ENV: /tmp/.tmpoMjDJT/.venv
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
  × No solution found when resolving dependencies:
  ╰─▶ Because there is no version of black available matching ==23.10.1 and
      root depends on black==23.10.1, version solving failed.

