crates/puffin-cli/tests/snapshots/pip_compile__compile_python_dev_version.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--python-version"
    - 3.7-dev
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '3.7-dev' for '--python-version <PYTHON_VERSION>': Python version 3.7-dev is a development release

For more information, try '--help'.

