crates/puffin-cli/tests/snapshots/pip_compile__compile_python_invalid_version.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--python-version"
    - 3.7.x
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '3.7.x' for '--python-version <PYTHON_VERSION>': Version `3.7.x` doesn't match PEP 440 rules

For more information, try '--help'.

