crates/puffin-cli/tests/snapshots/pip_compile__compile_requirements_in.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /tmp/.tmp7jS4Tv
  env:
    VIRTUAL_ENV: /tmp/.tmpYosB1I/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile requirements.in --cache-dir [CACHE_DIR]
asgiref==3.7.2
    # via django
django==5.0b1
sqlparse==0.4.4
    # via django

----- stderr -----
Resolved 3 packages in [TIME]

