crates/puffin-cli/tests/snapshots/pip_compile__compile_sdist_url_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /tmp/.tmp5RQ2Bp
  env:
    VIRTUAL_ENV: /tmp/.tmpAGRTvS/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile requirements.in --cache-dir [CACHE_DIR]
blinker==1.7.0
    # via flask
click==8.1.7
    # via flask
flask @ https://files.pythonhosted.org/packages/d8/09/c1a7354d3925a3c6c8cfdebf4245bae67d633ffda1ba415add06ffc839c5/flask-3.0.0.tar.gz
itsdangerous==2.1.2
    # via flask
jinja2==3.1.2
    # via flask
markupsafe==2.1.3
    # via
    #   jinja2
    #   werkzeug
werkzeug==3.0.1
    # via flask

----- stderr -----
Resolved 7 packages in [TIME]

