crates/puffin-cli/tests/snapshots/pip_compile__compile_solvable_requirements_multiple_direct_versions_for_package.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpcfI6sl
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpv4PQoW/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    [BIN_PATH] pip-compile pyproject.toml --cache-dir [CACHE_DIR]
asgiref==3.7.2
    # via django
django==3.0
pytz==2023.3.post1
    # via django
sqlparse==0.4.4
    # via django

----- stderr -----
Resolved 4 packages in [TIME]

