crates/puffin-cli/tests/snapshots/pip_compile__compile_unsolvable_requirements.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpRAI4mN
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpvNCp98/.venv
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
  × No solution found when resolving dependencies:
  ╰─▶ Because my-project depends on django==5.0b1 and my-project depends on
      django==5.0a1, version solving failed.

