crates/puffin-cli/tests/snapshots/pip_compile__compile_unsolvable_requirements_direct_ranges.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpQZyk8c
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpOV0S3e/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Conflicting versions for package `django`: >=4.0 is incompatible with <=3.0

